<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListaFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            style="@style/ElementoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elementos"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/opcHidro"
            style="@style/ElementoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hidro" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/opcHelio"
            style="@style/ElementoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/helio" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/opcLitio"
            style="@style/ElementoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/litio" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/opcBerilio"
            style="@style/ElementoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ber" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/opcBoro"
            style="@style/ElementoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boro" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/opcCarbono"
            style="@style/ElementoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carbono" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/opcNitro"
            style="@style/ElementoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nitro" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/opcOxi"
            style="@style/ElementoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oxi" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/opcFluor"
            style="@style/ElementoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fluor" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/opcNeo"
            style="@style/ElementoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/neon" />
    </LinearLayout>
</ScrollView>